--- a/legal.html
+++ b/legal.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Legal - Aura Calistenia</title>
-    <script>
-      document.documentElement.classList.add("js");
-    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css?v=20260218-5">
+    <link rel="stylesheet" href="/styles.css?v=20260218-7">
   </head>
   <body>
     <div class="noise" aria-hidden="true"></div>
@@ -38,14 +35,14 @@
 
     <main class="section legal-page">
       <div class="container" data-stagger>
-        <p class="eyebrow stagger-item">Información legal</p>
-        <h1 class="stagger-item">Aviso legal, privacidad y cookies</h1>
-        <p class="lead stagger-item">
+        <p class="eyebrow">Información legal</p>
+        <h1>Aviso legal, privacidad y cookies</h1>
+        <p class="lead">
           Texto base para cumplir con la información mínima de protección de datos y uso de cookies.
           Revísalo y personalízalo con tus datos fiscales reales antes de publicarlo de forma definitiva.
         </p>
 
-        <article id="aviso-legal" class="legal-card glass-card stagger-item">
+        <article id="aviso-legal" class="legal-card glass-card">
           <h2>Aviso legal</h2>
           <p>
             Titular del sitio: <strong>Aura Calistenia</strong>. Contacto: <strong>rafamdeeales@gmail.com</strong>.
@@ -57,7 +54,7 @@
           </p>
         </article>
 
-        <article id="privacidad" class="legal-card glass-card stagger-item">
+        <article id="privacidad" class="legal-card glass-card">
           <h2>Política de privacidad</h2>
           <p>
             Datos tratados: usuario, correo electrónico y los datos que el cliente aporta en formularios
@@ -78,7 +75,7 @@
           </p>
         </article>
 
-        <article id="cookies" class="legal-card glass-card stagger-item">
+        <article id="cookies" class="legal-card glass-card">
           <h2>Política de cookies</h2>
           <p>
             Esta web usa cookies técnicas necesarias para mantener sesiones de usuario y administración
