--- a/legal.html
+++ b/legal.html
@@ -7,24 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css?v=20260218-7">
+    <link rel="stylesheet" href="/styles.css?v=20260218-8">
   </head>
   <body>
     <div class="noise" aria-hidden="true"></div>
     <header class="nav">
-      <div class="nav-inner">
-        <nav class="nav-group nav-left">
-          <a href="/">Inicio</a>
-        </nav>
+      <div class="nav-inner nav-inner-legal">
         <a class="nav-brand" href="/" aria-label="Aura Calistenia">
           <span class="brand-mark" aria-hidden="true"></span>
         </a>
-        <nav class="nav-group nav-right">
-          <a href="#aviso-legal">Aviso legal</a>
-          <a href="#privacidad">Privacidad</a>
-          <a href="#cookies">Cookies</a>
-        </nav>
-        <nav class="nav-group nav-compact" aria-label="Secciones legales">
+        <nav class="nav-group nav-legal-group" aria-label="Navegación legal">
           <a href="/">Inicio</a>
           <a href="#aviso-legal">Aviso legal</a>
           <a href="#privacidad">Privacidad</a>
