ajustes boton y rapidez

--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
     <header class="nav">
       <div class="nav-inner">
         <nav class="nav-group nav-left"></nav>
-        <a class="nav-brand" href="/" aria-label="AuraCalistenia">
+        <a class="nav-brand" href="/admin?admin_section=inicio" aria-label="AuraCalistenia">
           <span class="brand-mark" aria-hidden="true"></span>
         </a>
         <nav class="nav-group nav-right">
