--- a/portal.html
+++ b/portal.html
@@ -14,15 +14,15 @@
     <header class="nav">
       <div class="nav-inner">
         <nav class="nav-group nav-left"></nav>
-        <a class="nav-brand" href="/" aria-label="AuraCalistenia">
+        <a class="nav-brand" href="{{PORTAL_HOME_HREF}}" aria-label="AuraCalistenia">
           <span class="brand-mark" aria-hidden="true"></span>
         </a>
         <nav class="nav-group nav-right">
-          <a href="/">Inicio</a>
+          <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
         <nav class="nav-group nav-compact" aria-label="Navegación">
-          <a href="/">Inicio</a>
+          <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
       </div>
