guia del usuario

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css?v=20260219-2">
+    <link rel="stylesheet" href="/styles.css?v=20260219-3">
   </head>
   <body>
     <div class="noise" aria-hidden="true"></div>
@@ -49,9 +49,11 @@
         <div class="hero-orb" aria-hidden="true"></div>
         <div class="hero-grid" aria-hidden="true"></div>
         <div class="container hero-content" data-stagger>
-          <p class="eyebrow stagger-item">{{HERO_EYEBROW}}</p>
-          <h1 class="stagger-item">{{HERO_TITLE}}</h1>
-          <p class="lead stagger-item">{{HERO_SUBTITLE}}</p>
+          <div class="hero-copy">
+            <p class="eyebrow stagger-item">{{HERO_EYEBROW}}</p>
+            <h1 class="stagger-item">{{HERO_TITLE}}</h1>
+            <p class="lead stagger-item">{{HERO_SUBTITLE}}</p>
+          </div>
           <div class="hero-actions stagger-item">
             <a class="btn glass primary hero-register-btn" href="#registro">Registrarse</a>
           </div>
@@ -145,14 +147,23 @@
 
           <div id="registro" class="form-card glass-card reveal" data-stagger>
             <div class="form-header stagger-item">
-              <h3>Cómo apuntarte al programa</h3>
-              <p>Completa la solicitud con tu skill y objetivo principal. Respondo con los siguientes pasos.</p>
+              <h3>Registro guiado (2 minutos)</h3>
+              <p>Rellena este formulario una sola vez. Revisamos tu solicitud manualmente y te respondemos siempre por correo, tanto si entras al equipo como si no.</p>
             </div>
             <ol class="join-steps">
-              <li>Elige tu skill y define tu objetivo principal.</li>
-              <li>Cuenta tu problema o inquietud para ajustar el plan.</li>
-              <li>Recibirás respuesta con los siguientes pasos.</li>
+              <li>Crea un usuario y contraseña: serán tus datos de acceso al portal si te aceptamos.</li>
+              <li>Completa tu skill objetivo, nivel y bloqueo principal para ajustar el plan.</li>
+              <li>Revisa tu email: recibirás respuesta confirmando si has sido aceptado o no.</li>
+              <li>Si eres aceptado, ese correo incluirá cómo entrar al portal y qué hacer dentro.</li>
             </ol>
+            <div class="join-guide glass">
+              <h4>Antes de enviar</h4>
+              <ul class="join-guide-list">
+                <li>Escribe un email real y sin errores.</li>
+                <li>Guarda tu usuario y contraseña.</li>
+                <li>Si no ves el correo, revisa spam/promociones.</li>
+              </ul>
+            </div>
             <!-- {{FORM_ALERT}} -->
             <form class="apply-form" action="/apply" method="post">
               <div class="form-row">
@@ -169,6 +180,7 @@
                 <div class="form-field">
                   <label for="email">Email</label>
                   <input id="email" name="email" type="email" placeholder="tu@email.com" required>
+                  <p class="field-help">Este correo se usa para enviarte la resolución y, si entras, las instrucciones de acceso al portal.</p>
                 </div>
                 <div class="form-field">
                   <label for="skill">Skill objetivo</label>
@@ -200,7 +212,7 @@
               </div>
               <button class="btn glass primary" type="submit">Enviar solicitud</button>
               <p class="form-note">
-                Tu contraseña se cifra y no se comparte. Recibirás confirmación cuando se revise tu solicitud.
+                Tu contraseña se cifra y no se comparte. Te enviaremos un correo cuando tu solicitud quede aceptada o rechazada.
               </p>
             </form>
           </div>
@@ -375,6 +387,6 @@
       </div>
     </footer>
 
-    <script src="/script.js?v=20260219-2"></script>
+    <script src="/script.js?v=20260219-3"></script>
   </body>
 </html>
