--- a/admin.html
+++ b/admin.html
@@ -194,6 +194,7 @@
                 <code>AURA_SMTP_FROM=AuraCalistenia</code>
                 <code>AURA_SMTP_ADMIN=tu_correo@gmail.com</code>
                 <code>AURA_SMTP_TLS=true</code>
+                <code>AURA_REQUIRE_DB=true</code>
                 <p class="admin-note">Cada vez que la cambies en Render, redeploy y queda activa sin guardarse en la base de datos.</p>
               </div>
             </details>
