--- a/index.html
+++ b/index.html
@@ -147,23 +147,14 @@
 
           <div id="registro" class="form-card glass-card reveal" data-stagger>
             <div class="form-header stagger-item">
-              <h3>Registro guiado (2 minutos)</h3>
-              <p>Rellena este formulario una sola vez. Revisamos tu solicitud manualmente y te respondemos siempre por correo, tanto si entras al equipo como si no.</p>
+              <h3>Cómo apuntarte al programa</h3>
+              <p>Completa la solicitud con tu skill y objetivo principal. Respondo con los siguientes pasos.</p>
             </div>
             <ol class="join-steps">
-              <li>Crea un usuario y contraseña: serán tus datos de acceso al portal si te aceptamos.</li>
-              <li>Completa tu skill objetivo, nivel y bloqueo principal para ajustar el plan.</li>
-              <li>Revisa tu email: recibirás respuesta confirmando si has sido aceptado o no.</li>
-              <li>Si eres aceptado, ese correo incluirá cómo entrar al portal y qué hacer dentro.</li>
+              <li>Elige tu skill y define tu objetivo principal.</li>
+              <li>Cuenta tu problema o inquietud para ajustar el plan.</li>
+              <li>Recibirás respuesta con los siguientes pasos.</li>
             </ol>
-            <div class="join-guide glass">
-              <h4>Antes de enviar</h4>
-              <ul class="join-guide-list">
-                <li>Escribe un email real y sin errores.</li>
-                <li>Guarda tu usuario y contraseña.</li>
-                <li>Si no ves el correo, revisa spam/promociones.</li>
-              </ul>
-            </div>
             <!-- {{FORM_ALERT}} -->
             <form class="apply-form" action="/apply" method="post">
               <div class="form-row">
@@ -180,7 +171,6 @@
                 <div class="form-field">
                   <label for="email">Email</label>
                   <input id="email" name="email" type="email" placeholder="tu@email.com" required>
-                  <p class="field-help">Este correo se usa para enviarte la resolución y, si entras, las instrucciones de acceso al portal.</p>
                 </div>
                 <div class="form-field">
                   <label for="skill">Skill objetivo</label>
@@ -212,7 +202,7 @@
               </div>
               <button class="btn glass primary" type="submit">Enviar solicitud</button>
               <p class="form-note">
-                Tu contraseña se cifra y no se comparte. Te enviaremos un correo cuando tu solicitud quede aceptada o rechazada.
+                Tu contraseña se cifra y no se comparte. Recibirás confirmación cuando se revise tu solicitud.
               </p>
             </form>
           </div>
