--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
         </a>
         <nav class="nav-group nav-right">
           <a href="/admin?admin_section=inicio" data-admin-section-link="inicio">Inicio</a>
+          <a href="/">Página principal</a>
           <a href="/admin?admin_section=portal" data-admin-section-link="portal">Portal del alumno</a>
           <form class="nav-logout-form" action="/admin/logout" method="post">
             <button class="btn nav-logout-btn" type="submit">Cerrar sesión</button>
@@ -26,6 +27,7 @@
         </nav>
         <nav class="nav-group nav-compact" aria-label="Navegación">
           <a href="/admin?admin_section=inicio" data-admin-section-link="inicio">Inicio</a>
+          <a href="/">Página principal</a>
           <a href="/admin?admin_section=portal" data-admin-section-link="portal">Portal del alumno</a>
           <form class="nav-logout-form" action="/admin/logout" method="post">
             <button class="btn nav-logout-btn" type="submit">Cerrar sesión</button>
