--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           <a href="#inicio">Inicio</a>
           <a href="#bio">Bio</a>
           <a href="#programa">Programa</a>
-          <a href="#contacto">Contacto</a>
+          <a href="#galeria">Vídeos</a>
         </nav>
         <a class="nav-brand" href="#inicio" aria-label="AuraCalistenia">
           <span class="brand-mark" aria-hidden="true"></span>
         </a>
         <nav class="nav-group nav-right">
-          <a href="#galeria">Vídeos</a>
           <a href="#eventos">Eventos</a>
+          <a href="#contacto">Contacto</a>
           <a href="/legal.html">Legal</a>
           <a href="/portal">Portal</a>
         </nav>
@@ -35,9 +35,9 @@
           <a href="#inicio">Inicio</a>
           <a href="#bio">Bio</a>
           <a href="#programa">Programa</a>
-          <a href="#contacto">Contacto</a>
           <a href="#galeria">Vídeos</a>
           <a href="#eventos">Eventos</a>
+          <a href="#contacto">Contacto</a>
           <a href="/legal.html">Legal</a>
           <a href="/portal">Portal</a>
         </nav>
@@ -155,6 +155,15 @@
               <li>Cuenta tu problema o inquietud para ajustar el plan.</li>
               <li>Recibirás respuesta con los siguientes pasos.</li>
             </ol>
+            <div class="register-guide glass">
+              <p class="register-guide-title">Importante</p>
+              <ul class="register-guide-list">
+                <li>Te responderemos por correo siempre: si estás aceptado o si no.</li>
+                <li>Si estás aceptado, ese correo trae la guía paso a paso para entrar al portal.</li>
+                <li>También te explicamos qué hay dentro y para qué sirve cada parte.</li>
+                <li>Si no lo ves al momento, revisa spam o promociones.</li>
+              </ul>
+            </div>
             <!-- {{FORM_ALERT}} -->
             <form class="apply-form" action="/apply" method="post">
               <div class="form-row">
