--- a/portal.html
+++ b/portal.html
@@ -19,10 +19,12 @@
         </a>
         <nav class="nav-group nav-right">
           <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
+          <a href="/">Página principal</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
         <nav class="nav-group nav-compact" aria-label="Navegación">
           <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
+          <a href="/">Página principal</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
       </div>
