--- a/portal.html
+++ b/portal.html
@@ -33,7 +33,7 @@
     <main class="section">
       <div class="container admin-header" data-stagger>
         <p class="eyebrow">Panel alumno</p>
-        <h1>Calistenia con aura épica</h1>
+        <h1>AURA CALISTENIA</h1>
         <p class="lead">Tu plan aparece día por día con el mismo diseño de la web.</p>
       </div>
 
