--- a/portal.html
+++ b/portal.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css?v=20260219-4">
+    <link rel="stylesheet" href="/styles.css?v=20260225-8">
   </head>
   <body class="admin-body portal-body">
     <div class="noise" aria-hidden="true"></div>
@@ -19,12 +19,12 @@
         </a>
         <nav class="nav-group nav-right">
           <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
-          <a href="/">Página principal</a>
+          <a href="/?from=portal">Página principal</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
         <nav class="nav-group nav-compact" aria-label="Navegación">
           <a href="{{PORTAL_HOME_HREF}}">Inicio</a>
-          <a href="/">Página principal</a>
+          <a href="/?from=portal">Página principal</a>
           {{PORTAL_NAV_ACTIONS}}
         </nav>
       </div>
@@ -41,6 +41,6 @@
         {{PORTAL_CONTENT}}
       </div>
     </main>
-    <script src="/script.js?v=20260219-4"></script>
+    <script src="/script.js?v=20260225-2"></script>
   </body>
 </html>
