--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css?v=20260219-4">
+    <link rel="stylesheet" href="/styles.css?v=20260225-8">
   </head>
   <body>
     <div class="noise" aria-hidden="true"></div>
@@ -145,7 +145,8 @@
             </article>
           </div>
 
-          <div id="registro" class="form-card glass-card reveal" data-stagger>
+          <div id="registro" class="register-anchor" aria-hidden="true"></div>
+          <div class="form-card glass-card reveal" data-stagger>
             <div class="form-header stagger-item">
               <h3>Cómo apuntarte al programa</h3>
               <p>Completa la solicitud con tu skill y objetivo principal. Respondo con los siguientes pasos.</p>
@@ -386,6 +387,6 @@
       </div>
     </footer>
 
-    <script src="/script.js?v=20260219-4"></script>
+    <script src="/script.js?v=20260225-2"></script>
   </body>
 </html>
